<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multiple Task Manager</string>
    <string name="menu_about">About Task Manager</string><string name="about_title">About Task Manager</string>
    <string name="title_activity_main">Task Manager</string>
    <string name="Start">  Start  </string>
    <string name="Tarea1">First Task</string>
    <string name="Tarea2">Second Task</string>
    <string name="Tarea3">Third Task</string>
    <string name="Tarea4">Forth Task</string>
    <string name="Stop">  Stop  </string>
    <string name="Restart"> Restart </string>
    <string name="StartAll"> Start All </string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="menu_exit">Exit</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_about">About Task Manager</string>
    <string name="about_text">Multiple Task Manager allows you to control the time of different tasks in the same layout.</string>
    <string name="button_xda">Tasker at XDA Developers</string>
    <string name="button_github">OpenSource at GitHub</string>
    <string name="button_paypal">Support the project at PayPal</string>

</resources>